Minh commit third

--- a/user/templates/user/login.html
+++ b/user/templates/user/login.html
@@ -37,6 +37,7 @@
         {% endif %}
         {% endfor %}
         <button type="submit" class="btn btn-success">Login</button>
+        <p>Bạn đã chưa tài khoản<a href="{% url 'register'%}"><span style="color:red">  Click here to Register</span></a></p> 
     </form>
 </body>
 
