--- a/user/templates/user/register.html
+++ b/user/templates/user/register.html
@@ -23,8 +23,7 @@
                     {% endif %}
                 </div>
                 {% endfor %}
-                <label style="color: white; margin-bottom: 30px;"><input name="remember_me" type="checkbox"> Remember Me</label>
-                <input  style="margin-bottom: 30px;" type="submit" class="btn btn-success btn-lg btn-block" value="Đăng Nhập">
+                <input  style="margin-bottom: 30px;" type="submit" class="btn btn-success btn-lg btn-block" value="Đăng Kí">
             </form>
             <p style="color: white; ">Bạn đã có tài khoản<a href="{% url 'login'%}"><span style="color:red">Click here to Login</span></a></p>
 
