--- a/chatrooms/templates/chatrooms/index.html
+++ b/chatrooms/templates/chatrooms/index.html
@@ -2,8 +2,9 @@
 {% load static customtags %}
 
 {% block title %}Index{% endblock %}
-
 {% block head %}
+<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
 <style media="screen">
     .container .card {
         max-width:800px
@@ -17,13 +18,20 @@
     <h1 class="font-weight-bold">Chat</h1>
     <div class="card card-body mx-auto text-left">
         <div class="btn-group btn-block mb-4" role="group">
-            <button class="btn btn-primary" type="button">{{ user.username }} ({{ user.email }})</button>
+            <a class="btn btn-primary" role="button" href="{{user.id}}/profile">{{ user.username }} ({{ user.email }})</a>
             <a class="btn btn-primary" href="{% url 'logout' %}" role="button">Sign out</a>
-        </div>
+        </div>  
         <h3>Users</h3>
         <div class="list-group">
             {% for user_dict in users %}
-            <a href="{% build_chat_url user.username user_dict.username %}" class="list-group-item list-group-item-action">{{ user_dict.username }}</a>
+            <li class="nav-item dropdown">
+                <a class="nav-link dropdown-toggle" data-bs-toggle="dropdown" href="#" role="button" aria-expanded="false">{{user_dict.username}}</a>
+                <ul class="dropdown-menu">
+                  <li><a class="dropdown-item" href="{% build_chat_url user.username user_dict.username %}">Inbox</a></li>
+                  <li><a class="dropdown-item" href="#">Profile</a></li>
+                </ul>
+              </li>
+            <!-- <a href="{% build_chat_url user.username user_dict.username %}" class="list-group-item list-group-item-action">{{ user_dict.username }}</a> -->
             {% empty %}
             <p class="text-muted">Ups! no users to chat with.</p>
             {% endfor %}
