--- a/user/templates/user/login.html
+++ b/user/templates/user/login.html
@@ -2,6 +2,9 @@
 <html lang="en">
 
 <head>
+    {% comment %} test {% endcomment %}
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    {% comment %} test {% endcomment %}
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -13,32 +16,157 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.min.js"
         integrity="sha384-QJHtvGhmr9XOIpI6YVutG+2QOK9T+ZnN4kzFN1RtK3zEFEIsxhlmWl5/YESvpZ13"
         crossorigin="anonymous"></script>
+    <style>
+        *{
+            margin:0;
+            padding: 0;
+            box-sizing: border-box;
+            font-family: 'Roboto', sans-serif;
+        }
+
+        section{
+            position: relative;
+            width: 100%;
+            height: 100vh;
+            display: flex;
+        }
+
+        
+       
+        section .noi-dung{
+            background-image: url("https://cdn.vjshop.vn/tin-tuc/cach-chup-anh-phong-canh/cach-chup-anh-phong-canh-dep-15.jpg");
+            background-position: center;
+            background-color: #B2D0D1;
+            background-size:  cover;
+           
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            width: 100%;
+            height: 100%;
+        }
+        section .noi-dung .background{
+            background-image:url('https://cdnimg.vietnamplus.vn/t870/Uploaded/ngtnnn/2017_04_02/0204Goldengate.jpg');
+            background-position: center;
+            background-color: #B2D0D1;
+           
+            border-width: 5px;
+            border-color: white;
+            border-style: dashed;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            width: 25%;
+            height: 70%;
+            border-bottom-left-radius: 40px;
+            border-bottom-right-radius: 40px;
+            border-top-left-radius: 40px;
+            border-top-right-radius: 40px;
+            
+         
+           
+        }  
+        section .noi-dung .background .form{
+           
+            width: 60%;
+        }  
+        section .noi-dung .background .form h1{
+            color: #607d8b;
+            font-weight: 500;
+            font-size: 1.5em;
+            text-transform: uppercase;
+            margin-bottom: 20px;
+            border-bottom: 4px solid #ff4584;
+            display: inline-block;
+            letter-spacing: 1px;
+        }
+        section .noi-dung .background .form .input-form{
+            margin-bottom: 20px;
+        }
+        section .noi-dung .background .form .input-form input[type="submit"]{
+            background: #ff4584;
+            color: #fff;
+            outline: none;
+            border: none;
+            font-weight: 500;
+            cursor: pointer;
+            box-shadow: 0 1px 1px rgba(0,0,0,0.12),
+                        0 2px 2px rgba(0,0,0,0.12),
+                        0 4px 4px rgba(0,0,0,0.12),
+                    0 8px 8px rgba(0,0,0,0.12),
+                    0 16px 16px rgba(0,0,0,0.12);
+        }
+        section .noi-dung .background .form .input-form input[type="submit"]:hover{
+            background: #f53677;
+        }
+        section .noi-dung .background .form .input-form span{
+            font-size: 16px;
+            margin-bottom: 5px;
+            display: inline-block;
+            color: #607db8;
+            letter-spacing: 1px;
+        }
+        section .noi-dung .background .form .input-form input{
+            width: 100%;
+            padding: 10px 20px;
+            outline: none;
+            border: 1px solid #607d8b;
+            font-size: 16px;
+            letter-spacing: 1px;
+            color: #607d8b;
+            background: transparent;
+            border-radius: 30px;
+        } 
+      
+        section .noi-dung .background .form p{
+                color: #607d8b;
+            }
+        section .noi-dung .background .form p a{
+            color: #ff4584;
+        } 
+       
+    </style>
     <title>Document</title>
 </head>
 
 <body>
-    <h1>Login</h1>
-    <form action="{% url 'login'%}" method="POST">
-        {% csrf_token%}
-        {% for error in form.non_field_errors %}
-        <div class="alert alert-danger mt-1">
-            {{error}}
+    <section>
+        {% comment %} <div class="img-bg">
+            <img src="https://cdn.vjshop.vn/tin-tuc/cach-chup-anh-phong-canh/cach-chup-anh-phong-canh-dep-15.jpg" alt="Hình Ảnh Minh Họa">
+        </div> {% endcomment %}
+        <div class="noi-dung">
+            <div class="background">
+                <div class="form">
+                    <h1>Login</h1>
+                    <form action="{% url 'login'%}" method="POST">
+                        {% csrf_token%}
+                        {% for error in form.non_field_errors %}
+                        <div class="alert alert-danger mt-1">
+                            {{error}}
+                        </div>
+                        {% endfor %}
+                        {% for field in form %}
+                        <div class="input-form">
+                            <span>{{ field.label}}</span>
+                            <h2>{{field}}</h2>
+                        </div>
+                        {% if fields.errors %}
+                        <div class="alert alert-danger">
+                            {{field.errors}}
+                        </div>
+                        {% endif %}
+                        {% endfor %}
+                        <div class="input-form">
+                            <input type="submit" value="Login">
+                        </div>
+                        <div class="input-form">
+                            <p>Bạn Chưa Có Tài Khoản? <a href="{% url 'register'%}">Đăng Ký</a></p>
+                        </div>
+                    
+                    </form>
+                </div>
+            </div>
         </div>
-        {% endfor %}
-        {% for field in form %}
-        <div class="form-group">
-            {{ field.label}}
-            {{field}}
-        </div>
-        {% if fields.errors %}
-        <div class="alert alert-danger">
-            {{field.errors}}
-        </div>
-        {% endif %}
-        {% endfor %}
-        <button type="submit" class="btn btn-success">Login</button>
-        <p>Bạn đã chưa tài khoản<a href="{% url 'register'%}"><span style="color:red">  Click here to Register</span></a></p> 
-    </form>
+    </section>    
 </body>
-
 </html>
