--- a/user/templates/user/login.html
+++ b/user/templates/user/login.html
@@ -52,7 +52,7 @@
            
             border-width: 5px;
             border-color: white;
-            border-style: dashed;
+            border-style: solid;
             display: flex;
             justify-content: center;
             align-items: center;
