--- a/user/templates/user/register.html
+++ b/user/templates/user/register.html
@@ -1,34 +1,188 @@
-{% extends 'base/base.html' %}
-{% block title %}
-Đăng Ký
-{% endblock title %}
-{% block content %}
-<div class="col-md-8 offset-md-2" >
-    <div class="row" style="background: url(https://chiase24.com/wp-content/uploads/2019/08/T%E1%BB%95ng-h%E1%BB%A3p-h%C3%ACnh-n%E1%BB%81n-galaxy-wallpaper-%C4%91%E1%BA%B9p-nh%E1%BA%A5t-1.jpg); height: 900px;">
-        <div class="col-md-6 offset-md-3">
-            <h1 style="color: white;">Register</h1>
-            {% if message %}
-            <h4 style="color:red"> {{message}}</h4>
-            {% endif %}
-            <form method="POST">
-                {% csrf_token %}
-                {% for field in form %}
-                <div class="form-group" style="margin-bottom: 30px;">
-                    <label style="color: white;" for="">{{field.label}}</label>
-                    {{field}}
-                    {% if field.errors %}
-                    {% for error in field.errors %}
-                    <p style="color:red">{{error}}</p>
-                    {% endfor %}
+<!DOCTYPE html>
+<html lang="en">
+
+<head>
+    {% comment %} test {% endcomment %}
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    {% comment %} test {% endcomment %}
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.10.2/dist/umd/popper.min.js"
+        integrity="sha384-7+zCNj/IqJ95wo16oMtfsKbZ9ccEh31eOz1HGyDuCQ6wgnyJNSYdrPa03rtR1zdB"
+        crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.min.js"
+        integrity="sha384-QJHtvGhmr9XOIpI6YVutG+2QOK9T+ZnN4kzFN1RtK3zEFEIsxhlmWl5/YESvpZ13"
+        crossorigin="anonymous"></script>
+    <style>
+        *{
+            margin:0;
+            padding: 0;
+            box-sizing: border-box;
+            font-family: 'Roboto', sans-serif;
+        }
+        body {
+          height: 100%;
+        }
+
+        body {
+            background-image: url("https://cdn.vjshop.vn/tin-tuc/cach-chup-anh-phong-canh/cach-chup-anh-phong-canh-dep-15.jpg");
+            background-position: center;
+            background-repeat: no-repeat;
+            background-color: #B2D0D1;
+            background-size:  cover;
+            background-attachment:fixed;
+            display: -ms-flexbox;
+            display: flex;
+            -ms-flex-align: center;
+            align-items: center;
+          
+        }
+        section{
+            position: relative;
+            width: 100%;
+            height: 100vh;
+            display: flex;
+          
+            
+        }
+
+        
+       
+        section .noi-dung{
+           
+           
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            width: 100%;
+            height: 100hv;
+        }
+        section .noi-dung .background{
+            background-image:url('https://cdnimg.vietnamplus.vn/t870/Uploaded/ngtnnn/2017_04_02/0204Goldengate.jpg');
+            background-position: center;
+            background-color: #B2D0D1;
+            background-repeat: no-repeat;
+            background-size:  cover;
+            border-width: 5px;
+            border-color: white;
+            border-style : solid;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            width: 30%;
+            height: 95%;
+            border-bottom-left-radius: 40px;
+            border-bottom-right-radius: 40px;
+            border-top-left-radius: 40px;
+            border-top-right-radius: 40px;
+            
+         
+           
+        }  
+        section .noi-dung .background .form{
+            height: 95%;
+            width: 70%;
+        }  
+        section .noi-dung .background .form h1{
+            color: #607d8b;
+            font-weight: 500;
+            font-size: 1.5em;
+            text-transform: uppercase;
+            margin-bottom: 10px;
+            border-bottom: 4px solid #ff4584;
+            display: inline-block;
+            letter-spacing: 1px;
+        }
+        section .noi-dung .background .form .input-form{
+            margin-bottom: 10px;
+        }
+        section .noi-dung .background .form .input-form input[type="submit"]{
+            background: #ff4584;
+            color: #fff;
+            outline: none;
+            border: none;
+            font-weight: 500;
+            cursor: pointer;
+            box-shadow: 0 1px 1px rgba(0,0,0,0.12),
+                        0 2px 2px rgba(0,0,0,0.12),
+                        0 4px 4px rgba(0,0,0,0.12),
+                    0 8px 8px rgba(0,0,0,0.12),
+                    0 16px 16px rgba(0,0,0,0.12);
+        }
+        section .noi-dung .background .form .input-form input[type="submit"]:hover{
+            background: #f53677;
+        }
+        section .noi-dung .background .form .input-form span{
+            font-size: 12px;
+            margin-bottom: 5px;
+            display: inline-block;
+            color: #607db8;
+            letter-spacing: 1px;
+        }
+        section .noi-dung .background .form .input-form input{
+            width: 100%;
+            padding: 10px 20px;
+            outline: none;
+            border: 1px solid #607d8b;
+            font-size: 12px;
+            letter-spacing: 1px;
+            color: #607d8b;
+            background: transparent;
+            border-radius: 30px;
+            margin-bottom: 35px;
+        } 
+      
+        section .noi-dung .background .form p{
+                color: #607d8b;
+            }
+        section .noi-dung .background .form p a{
+            color: #ff4584;
+        } 
+       
+    </style>
+    <title>Register</title>
+</head>
+
+<body>
+    <section>
+        <div class="noi-dung" >
+           
+            <div class="background">
+                <div class="form">
+                    <h1 >Register</h1>
+                    {% if message %}
+                        <h4 > {{message}}</h4>
                     {% endif %}
+                    <form method="POST">
+                        {% csrf_token %}
+                        {% for field in form %}
+                        <div class="input-form" >
+                            <span>{{ field.label}}</span>
+                            <h2>{{field}}</h2>
+                            {% if field.errors %}
+                                {% for error in field.errors %}
+                                    <div class="alert alert-danger">
+                                        <p >{{error}}</p>
+                                    </div>
+                                {% endfor %}
+                            {% endif %}
+                        </div>
+                        {% endfor %}
+                        <div class="input-form">
+                            <input type="submit"  value="Đăng Kí">
+                        </div>
+                        <div class="input-form">
+                            <p style="color: white; ">Bạn đã có tài khoản<a href="{% url 'login'%}">Click here to Login</a></p>
+                        </div>
+
+                    </form>
                 </div>
-                {% endfor %}
-                <input  style="margin-bottom: 30px;" type="submit" class="btn btn-success btn-lg btn-block" value="Đăng Kí">
-            </form>
-            <p style="color: white; ">Bạn đã có tài khoản<a href="{% url 'login'%}"><span style="color:red">Click here to Login</span></a></p>
 
+            </div>
         </div>
-    </div>
-</div>
-
-{% endblock content %}
+    </section>
+</body>
+</html>
