--- a/user/templates/user/login.html
+++ b/user/templates/user/login.html
@@ -32,7 +32,7 @@
         <div class="content">
             <div class="background">
                 <div class="form">
-                    <h1>Login</h1>
+                    <h1>Sign in</h1>
                     <form action="{% url 'login'%}" method="POST">
                         {% csrf_token%}
                         {% for error in form.non_field_errors %}
@@ -52,10 +52,10 @@
                         {% endif %}
                         {% endfor %}
                         <div class="input-form">
-                            <input type="submit" value="Login">
+                            <input type="submit" value="Sign in">
                         </div>
                         <div class="input-form">
-                            <p>Bạn Chưa Có Tài Khoản? <a href="{% url 'register'%}">Đăng Ký</a></p>
+                            <p>Do not have an account? <a href="{% url 'register'%}">Sign Up</a></p>
                         </div>
                     
                     </form>
