--- a/user/templates/user/register.html
+++ b/user/templates/user/register.html
@@ -48,10 +48,10 @@
                         </div>
                         {% endfor %}
                         <div class="input-form">
-                            <input type="submit"  value="Đăng Kí">
+                            <input type="submit"  value="Sign Up">
                         </div>
                         <div class="input-form">
-                            <p style="color: white; ">Bạn đã có tài khoản<a href="{% url 'login'%}">Click here to Login</a></p>
+                            <p style="color: white; ">Do you already have an account?<a href="{% url 'login'%}">Click here to Login</a></p>
                         </div>
 
                     </form>
