6:07_11/11/2021: Update CSS for Homepage

--- a/chatrooms/templates/chatrooms/room.html
+++ b/chatrooms/templates/chatrooms/room.html
@@ -1,13 +1,12 @@
-
 {% extends "base/base.html" %}
 {% load static customtags %}
-{%load static %}
+{% load static %}
 {% block title %}Chat{% endblock %}
 
 {% block head %}
 <style media="screen">
     .container .card {
-        max-width: 800px
+        max-width: 800px;
     }
 
     .card-chat {
