--- a/chatrooms/templates/chatrooms/index.html
+++ b/chatrooms/templates/chatrooms/index.html
@@ -1,28 +1,75 @@
 {% extends "base/base.html" %}
 {% load static customtags %}
+{% load static %}
 
-{% block title %}Index{% endblock %}
+{% block title %}Home{% endblock %}
 {% block head %}
 <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+<link href='https://unpkg.com/boxicons@2.0.9/css/boxicons.min.css' rel='stylesheet'>
+<link href="{% static 'css/index.css' %}" rel="stylesheet">
+
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
-<style media="screen">
-    .container .card {
-        max-width:800px
-    }
-</style>
 {% endblock %}
 
 {% block content %}
-
 <div class="container">
-    <h1 class="font-weight-bold">Chat</h1>
-    <div class="card card-body mx-auto text-left">
-        <div class="btn-group btn-block mb-4" role="group">
-            <a class="btn btn-primary" role="button" href="{{user.username}}/profile">{{ user.username }} ({{ user.email }})</a>
-            <a class="btn btn-primary" href="{% url 'logout' %}" role="button">Sign out</a>
-        </div>  
+    <nav class="navbar navbar-expand-lg navbar-light bg-light">
+        <div class="container-fluid">
+            <a class="navbar-brand" href="/chat">
+                <img src="{% static 'images/home_button.jpg' %}" class="rounded-circle home_button">
+            </a>
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse" id="navbarSupportedContent">
+                <ul class="navbar-nav mx-auto mb-2 mb-lg-0">
+                    <button class="btn mx-auto nav-item" type="button" data-bs-toggle="offcanvas" data-bs-target="#offcanvasRight" aria-controls="offcanvasRight">
+                        <i class='bx bxl-messenger icon'></i>
+                    </button>
+                    <li class="nav-item active">
+                        <a class="nav-link" role="button" href="/chat/{{user.username}}/profile">
+                            <i class='bx bx-user-circle icon' ></i>
+                        </a>
+                    </li>
+                </ul>
+
+                <a class="nav-link" href="{% url 'logout' %}">
+                    <i class='bx bx-log-out icon' ></i>
+                </a>
+            </div>
+        </div>
+    </nav>
+    
+    <div class="offcanvas offcanvas-end" tabindex="-1" id="offcanvasRight" aria-labelledby="offcanvasRightLabel">
+        <div class="offcanvas-header">
+            <h3 id="offcanvasRightLabel"> <strong>Your Friends</strong></h3>
+            <button type="button" class="btn-close text-reset" data-bs-dismiss="offcanvas" aria-label="Close"></button>
+        </div>
+        
+        <div class="offcanvas-body">
+            <form class="d-flex" action="{% url 'index' %}">
+                <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search" name="search">
+                <button class="btn btn-outline-success" type="submit">
+                    <i class='bx bx-search-alt' ></i>
+                </button>
+            </form>
+
+            {% for user_dict in users %}
+            <div class="friend">
+                <a href="{% build_chat_url user.username user_dict.username %}">{{user_dict.first_name}} {{user_dict.last_name}}</a>
+            </div>
+            {% empty %}
+            <p class="text-muted">Ups! no users to chat with.</p>
+            {% endfor %}
+        </div>
+    </div>
+
+    <br>
+
+    <!-- testing -->
+    <!-- <div class="card card-body mx-auto text-left">
         <div>
-            <h3>Friends:</h3>
+            <h3>Your Friends:</h3>
             <form class="d-flex" action="{% url 'index' %}">
                 <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search" name="search">
                 <button class="btn btn-outline-success" type="submit">Search</button>
@@ -37,15 +84,15 @@
                   <li><a class="dropdown-item" href="{% build_chat_url user.username user_dict.username %}">Inbox</a></li>
                   <li><a class="dropdown-item" href="{{user_dict.username}}/receiverprofile">Profile</a></li>
                 </ul>
-              </li>
-            <!-- <a href="{% build_chat_url user.username user_dict.username %}" class="list-group-item list-group-item-action">{{ user_dict.username }}</a> -->
+            </li>
+            
             {% empty %}
             <p class="text-muted">Ups! no users to chat with.</p>
             {% endfor %}
         </div>
-    </div>
+    </div> -->
 </div>
-
+<!-- <a href="{% build_chat_url user.username user_dict.username %}" class="list-group-item list-group-item-action">{{ user_dict.username }}</a> -->
 {% endblock %}
 <!-- <!DOCTYPE html>
 <html>
