--- a/static/css/login.css
+++ b/static/css/login.css
@@ -12,10 +12,8 @@ section {
     display: flex;
 }
 
-
-
 section .content {
-    background-image: url("https://cdn.vjshop.vn/tin-tuc/cach-chup-anh-phong-canh/cach-chup-anh-phong-canh-dep-15.jpg");
+    background-image: url("../images/BackGround.jpg");
     background-position: center;
     background-color: #B2D0D1;
     background-size:  cover;
@@ -26,11 +24,13 @@ section .content {
     width: 100%;
     height: 100%;
 }
+
 section .content .background {
-    background-image:url('https://cdnimg.vietnamplus.vn/t870/Uploaded/ngtnnn/2017_04_02/0204Goldengate.jpg');
+    background-image:url('../images/magic_door___photoshop_art_by_neoartland_dekwv6z.jpg');
     background-position: center;
     background-color: #B2D0D1;
-   
+    background-size:  cover;
+
     border-width: 5px;
     border-color: white;
     border-style: solid;
@@ -39,18 +39,13 @@ section .content .background {
     align-items: center;
     width: 25%;
     height: 70%;
-    border-bottom-left-radius: 40px;
-    border-bottom-right-radius: 40px;
-    border-top-left-radius: 40px;
-    border-top-right-radius: 40px;
-    
- 
-   
-}  
+    border-radius: 20px;
+} 
+
 section .content .background .form {
-   
     width: 60%;
 }  
+
 section .content .background .form h1 {
     color: #607d8b;
     font-weight: 500;
@@ -61,9 +56,11 @@ section .content .background .form h1 {
     display: inline-block;
     letter-spacing: 1px;
 }
+
 section .content .background .form .input-form {
     margin-bottom: 20px;
 }
+
 section .content .background .form .input-form input[type="submit"] {
     background: #ff4584;
     color: #fff;
@@ -77,9 +74,11 @@ section .content .background .form .input-form input[type="submit"] {
                 0 8px 8px rgba(0,0,0,0.12),
                 0 16px 16px rgba(0,0,0,0.12);
 }
+
 section .content .background .form .input-form input[type="submit"]:hover {
     background: #f53677;
 }
+
 section .content .background .form .input-form span {
     font-size: 16px;
     margin-bottom: 5px;
@@ -87,6 +86,7 @@ section .content .background .form .input-form span {
     color: #607db8;
     letter-spacing: 1px;
 }
+
 section .content .background .form .input-form input {
     width: 100%;
     padding: 10px 20px;
@@ -100,8 +100,9 @@ section .content .background .form .input-form input {
 } 
 
 section .content .background .form p {
-        color: #607d8b;
-    }
+    color: #607d8b;
+}
+
 section .content .background .form p a {
     color: #ff4584;
 }
