--- a/static/css/register.css
+++ b/static/css/register.css
@@ -1,15 +1,16 @@
-*{
+* {
     margin:0;
     padding: 0;
     box-sizing: border-box;
     font-family: 'Roboto', sans-serif;
 }
+
 body {
   height: 100%;
 }
 
 body {
-    background-image: url("https://cdn.vjshop.vn/tin-tuc/cach-chup-anh-phong-canh/cach-chup-anh-phong-canh-dep-15.jpg");
+    background-image: url("../images/BackGround.jpg");
     background-position: center;
     background-repeat: no-repeat;
     background-color: #B2D0D1;
@@ -19,30 +20,25 @@ body {
     display: flex;
     -ms-flex-align: center;
     align-items: center;
-  
 }
-section{
+
+section {
     position: relative;
     width: 100%;
     height: 100vh;
     display: flex;
-  
-    
 }
 
-
-
-section .content{
-   
-   
+section .content {
     display: flex;
     justify-content: center;
     align-items: center;
     width: 100%;
     height: 100hv;
 }
-section .content .background{
-    background-image:url('https://cdnimg.vietnamplus.vn/t870/Uploaded/ngtnnn/2017_04_02/0204Goldengate.jpg');
+
+section .content .background {
+    background-image:url('../images/magic_door___photoshop_art_by_neoartland_dekwv6z.jpg');
     background-position: center;
     background-color: #B2D0D1;
     background-repeat: no-repeat;
@@ -55,19 +51,15 @@ section .content .background{
     align-items: center;
     width: 30%;
     height: 95%;
-    border-bottom-left-radius: 40px;
-    border-bottom-right-radius: 40px;
-    border-top-left-radius: 40px;
-    border-top-right-radius: 40px;
-    
- 
-   
-}  
-section .content .background .form{
+    border-radius: 20px;
+}
+
+section .content .background .form {
     height: 95%;
     width: 70%;
-}  
-section .content .background .form h1{
+}
+
+section .content .background .form h1 {
     color: #607d8b;
     font-weight: 500;
     font-size: 1.5em;
@@ -77,10 +69,12 @@ section .content .background .form h1{
     display: inline-block;
     letter-spacing: 1px;
 }
-section .content .background .form .input-form{
+
+section .content .background .form .input-form {
     margin-bottom: 10px;
 }
-section .content .background .form .input-form input[type="submit"]{
+
+section .content .background .form .input-form input[type="submit"] {
     background: #ff4584;
     color: #fff;
     outline: none;
@@ -93,17 +87,20 @@ section .content .background .form .input-form input[type="submit"]{
                 0 8px 8px rgba(0,0,0,0.12),
                 0 16px 16px rgba(0,0,0,0.12);
 }
-section .content .background .form .input-form input[type="submit"]:hover{
+
+section .content .background .form .input-form input[type="submit"]:hover {
     background: #f53677;
 }
-section .content .background .form .input-form span{
+
+section .content .background .form .input-form span {
     font-size: 12px;
     margin-bottom: 5px;
     display: inline-block;
     color: #607db8;
     letter-spacing: 1px;
 }
-section .content .background .form .input-form input{
+
+section .content .background .form .input-form input {
     width: 100%;
     padding: 10px 20px;
     outline: none;
@@ -116,9 +113,10 @@ section .content .background .form .input-form input{
     margin-bottom: 35px;
 } 
 
-section .content .background .form p{
-        color: #607d8b;
-    }
-section .content .background .form p a{
+section .content .background .form p {
+    color: #607d8b;
+}
+
+section .content .background .form p a {
     color: #ff4584;
 } 
