--- a/chatrooms/templates/profile/profile.html
+++ b/chatrooms/templates/profile/profile.html
@@ -23,19 +23,22 @@
             </button>
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
                 <ul class="navbar-nav mx-auto mb-2 mb-lg-0">
-                    <button class="btn mx-auto nav-item" type="button" data-bs-toggle="offcanvas" data-bs-target="#offcanvasRight" aria-controls="offcanvasRight">
-                        <i class='bx bxl-messenger icon'></i>
+                    <button class="nav-item btn" type="button" data-bs-toggle="offcanvas" data-bs-target="#offcanvasRight" aria-controls="offcanvasRight">
+                        <i class='nav-link bx bxl-messenger icon'></i>
                     </button>
-                    <li class="nav-item active">
-                        <a class="nav-link" role="button" href="/chat/{{user.username}}/profile">
-                            <i class='bx bx-user-circle icon' ></i>
+                    <button class="nav-item btn" type="button">
+                        <a role="button" href="/chat/{{user.username}}/profile">
+                            <i class='nav-link bx bx-user-circle icon' ></i>
                         </a>
-                    </li>
+                    </button>
                 </ul>
-
-                <a class="nav-link" href="{% url 'logout' %}">
-                    <i class='bx bx-log-out icon' ></i>
-                </a>
+                <ul class="navbar-nav me-0 mb-2 mb-lg-0">
+                    <button class="nav-item btn" type="button">
+                        <a role="button" href="{% url 'logout' %}">
+                            <i class='nav-link bx bx-log-out icon log-out' ></i>
+                        </a>
+                    </button>
+                </ul>
             </div>
         </div>
     </nav>
@@ -45,7 +48,7 @@
             <h3 id="offcanvasRightLabel"> <strong>Your Friends</strong></h3>
             <button type="button" class="btn-close text-reset" data-bs-dismiss="offcanvas" aria-label="Close"></button>
         </div>
-
+        
         <div class="offcanvas-body">
             <form class="d-flex" action="{% url 'index' %}">
                 <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search" name="search">
@@ -54,8 +57,6 @@
                 </button>
             </form>
 
-            <!-- There is a bug here -->
-            <!-- Not load user_dict -->
             {% for user_dict in users %}
             <div class="friend">
                 <a href="{% build_chat_url user.username user_dict.username %}">{{user_dict.first_name}} {{user_dict.last_name}}</a>
