--- a/chatrooms/templates/profile/profile.html
+++ b/chatrooms/templates/profile/profile.html
@@ -69,11 +69,11 @@
 
     <br>
 
-    <div>
-        <h3>User:  {{user.username}}</h3>
-        <h3>Email: {{user.email}}</h3>
-        <h3>FirstName: {{user.first_name}}</h3>
-        <h3>LastName : {{user.last_name}}</h3>
+    <div class="pro-info">
+            <div> <h3>User:  {{user.username}}</h3> </div>
+            <div> <h3>Email: {{user.email}}</h3> </div>
+            <div> <h3>FirstName: {{user.first_name}}</h3> </div>
+            <div> <h3>LastName : {{user.last_name}}</h3> </div>
     </div>
 </div>
 <!-- <a href="{% build_chat_url user.username user_dict.username %}" class="list-group-item list-group-item-action">{{ user_dict.username }}</a> -->
