--- a/user/templates/user/register.html
+++ b/user/templates/user/register.html
@@ -51,7 +51,8 @@
                             <input type="submit"  value="Sign Up">
                         </div>
                         <div class="input-form">
-                            <p style="color: white; ">Do you already have an account?<a href="{% url 'login'%}">Click here to Login</a></p>
+                            <p>Do you already have an account?</p>
+                            <p><a href="{% url 'login'%}">Click here to Login</a></p>
                         </div>
 
                     </form>
