--- a/static/css/register.css
+++ b/static/css/register.css
@@ -5,23 +5,6 @@
     font-family: 'Roboto', sans-serif;
 }
 
-body {
-  height: 100%;
-}
-
-body {
-    background-image: url("../images/BackGround.jpg");
-    background-position: center;
-    background-repeat: no-repeat;
-    background-color: #B2D0D1;
-    background-size:  cover;
-    background-attachment:fixed;
-    display: -ms-flexbox;
-    display: flex;
-    -ms-flex-align: center;
-    align-items: center;
-}
-
 section {
     position: relative;
     width: 100%;
@@ -30,52 +13,55 @@ section {
 }
 
 section .content {
+    background-image: url("../images/BackGround.jpg");
+    background-position: center;
+    background-color: #B2D0D1;
+    background-size:  cover;
+   
     display: flex;
     justify-content: center;
     align-items: center;
     width: 100%;
-    height: 100hv;
+    height: 100%;
 }
 
 section .content .background {
-    background-image:url('../images/magic_door___photoshop_art_by_neoartland_dekwv6z.jpg');
     background-position: center;
-    background-color: #B2D0D1;
-    background-repeat: no-repeat;
-    background-size:  cover;
-    border-width: 5px;
-    border-color: white;
-    border-style : solid;
+    background-color: #ffffff;
+    background-size: cover;
+
+    border-width: 3px;
+    border-color: #B4CFBF;
+    border-style: solid;
     display: flex;
     justify-content: center;
     align-items: center;
-    width: 30%;
-    height: 95%;
+    width: 25%;
+    height: 85%;
     border-radius: 20px;
-}
+} 
 
 section .content .background .form {
-    height: 95%;
-    width: 70%;
-}
+    width: 65%;
+}  
 
 section .content .background .form h1 {
     color: #607d8b;
     font-weight: 500;
-    font-size: 1.5em;
+    font-size: 2em;
     text-transform: uppercase;
-    margin-bottom: 10px;
-    border-bottom: 4px solid #ff4584;
+    margin-bottom: 20px;
+    border-bottom: 4px solid #11694E;
     display: inline-block;
     letter-spacing: 1px;
 }
 
 section .content .background .form .input-form {
-    margin-bottom: 10px;
+    margin-bottom: 20px;
 }
 
 section .content .background .form .input-form input[type="submit"] {
-    background: #ff4584;
+    background: #15997A;
     color: #fff;
     outline: none;
     border: none;
@@ -89,11 +75,11 @@ section .content .background .form .input-form input[type="submit"] {
 }
 
 section .content .background .form .input-form input[type="submit"]:hover {
-    background: #f53677;
+    background: #01796F;
 }
 
 section .content .background .form .input-form span {
-    font-size: 12px;
+    font-size: 16px;
     margin-bottom: 5px;
     display: inline-block;
     color: #607db8;
@@ -105,18 +91,19 @@ section .content .background .form .input-form input {
     padding: 10px 20px;
     outline: none;
     border: 1px solid #607d8b;
-    font-size: 12px;
+    font-size: 16px;
     letter-spacing: 1px;
     color: #607d8b;
     background: transparent;
     border-radius: 30px;
-    margin-bottom: 35px;
 } 
 
 section .content .background .form p {
     color: #607d8b;
+    margin: 0;
 }
 
 section .content .background .form p a {
-    color: #ff4584;
-} 
+    color: #235E52;
+}
+
