--- a/user/templates/user/login.html
+++ b/user/templates/user/login.html
@@ -32,7 +32,7 @@
         <div class="content">
             <div class="background">
                 <div class="form">
-                    <h1>Sign in</h1>
+                    <h1>Log in</h1>
                     <form action="{% url 'login'%}" method="POST">
                         {% csrf_token%}
                         {% for error in form.non_field_errors %}
@@ -52,7 +52,7 @@
                         {% endif %}
                         {% endfor %}
                         <div class="input-form">
-                            <input type="submit" value="Sign in">
+                            <input type="submit" value="Log in">
                         </div>
                         <div class="input-form">
                             <p>Do not have an account? <a href="{% url 'register'%}">Sign Up</a></p>
