--- a/chatrooms/templates/profile/profile.html
+++ b/chatrooms/templates/profile/profile.html
@@ -74,7 +74,7 @@
             <div> <h3>Email: {{user.email}}</h3> </div>
             <div> <h3>FirstName: {{user.first_name}}</h3> </div>
             <div> <h3>LastName : {{user.last_name}}</h3> </div>
-            <div> <h3>Age : {{user.age}}</h3> </div>
+            <div> <h3>Date of Birth : {{user.dob}}</h3> </div>
             <div> <h3>Sex : {{user.sex}}</h3> </div>
             <div> <h3>Address : {{user.address}}</h3> </div>
             <p><a href="{% url 'change_password'%}">Change Password</a></p>
