--- a/chatrooms/templates/profile/receiver_profile.html
+++ b/chatrooms/templates/profile/receiver_profile.html
@@ -73,6 +73,9 @@
         <h3>First_name:{{receiver.first_name}}</h3>
         <h3>Last_Name:{{receiver.last_name}}</h3>
         <h3>Email:{{receiver.email}}</h3>
+        <div> <h3>Date of Birth : {{receiver.dob}}</h3> </div>
+        <div> <h3>Sex : {{receiver.sex}}</h3> </div>
+        <div> <h3>Address : {{receiver.address}}</h3> </div>
     </div>
 </div>
 <!-- <a href="{% build_chat_url user.username user_dict.username %}" class="list-group-item list-group-item-action">{{ user_dict.username }}</a> -->
