--- a/chatrooms/templates/profile/receiver_profile.html
+++ b/chatrooms/templates/profile/receiver_profile.html
@@ -77,7 +77,7 @@
 
     <br>
 
-    <div>
+    <div class="receiver-info">
         <h3>First_name:{{receiver.first_name}}</h3>
         <h3>Last_Name:{{receiver.last_name}}</h3>
         <h3>Email:{{receiver.email}}</h3>
