--- a/chatrooms/templates/chatrooms/index.html
+++ b/chatrooms/templates/chatrooms/index.html
@@ -50,9 +50,9 @@
         </div>
         
         <div class="offcanvas-body">
-            <form class="d-flex" action="{% url 'index' %}">
+            <form class="d-flex" action="">
                 <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search" name="search">
-                <button class="btn btn-outline-success" type="submit">
+                <button class="btn btn-outline-success" type="button">
                     <i class='bx bx-search-alt' ></i>
                 </button>
             </form>
