--- a/chatrooms/templates/chatrooms/room.html
+++ b/chatrooms/templates/chatrooms/room.html
@@ -4,37 +4,41 @@
 
 {% block title %}Chat{% endblock %}
 {% block head %}
-<style media="screen">
-    .container .card {
-        max-width: 800px;
-    }
+<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+<link href='https://unpkg.com/boxicons@2.0.9/css/boxicons.min.css' rel='stylesheet'>
+<link href="{% static 'css/room.css' %}" rel="stylesheet">
 
-    .card-chat {
-        height: 300px;
-        overflow-y: scroll;
-    }
-
-    .card-chat p {
-        margin-bottom: 0;
-    }
-</style>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
 {% endblock %}
 
 {% block content %}
-<div class="container">
-    <div class="card card-body mx-auto text-left">
-        <h3>To: {{ receiver.username }} <a class="btn btn-danger float-right"
-                href="{% url 'index' %}" role="button">Exit</a></h3>
-        <div id="chat-messages" class="card card-body card-chat text-left">
-        </div>
-        <input id="message" class="form-control mt-2 " type="text" placeholder="Type your message...">
-        <button id="send-message" class="btn btn-primary float-right mt-2">Send</button>
+<div class="chat-zone text-left">
+    <div class="chat-left">
+        
     </div>
-
-
+    <div class="chat-right">
+        <div class="test">
+            <h3>To: {{receiver.first_name}} {{receiver.last_name}} <a class="btn btn-danger float-right" href="{% url 'index' %}" role="button">Exit</a> </h3>
+        </div>
+        <div class="chat-box">
+            <div id="chat-messages" class="card card-body card-chat text-left"> </div>
+        </div>
+        <div class="mess-line">
+            <div class="mess-form">
+                <input id="message" class="form-control" type="text" placeholder="Type your message...">
+            </div>
+            <div class="mess-send">
+                <a id="send-message" class="btn float-right">
+                    <i class='bx bx-send icon' ></i>
+                </a>
+            </div>
+        </div>
+    </div>
+    
 </div>
 
-<script src="{% static 'reconnecting-websocket.js'%}"></script>
+
+<script src="{% static 'reconnecting-websocket.js' %}"></script>
 <script type="text/javascript">
     $(function () {
         function addMessageToChat(data) {
