--- a/static/css/receiver_profile.css
+++ b/static/css/receiver_profile.css
@@ -5,6 +5,10 @@
     font-family: 'Roboto', sans-serif;
 }
 
+input:focus, textarea:focus, select:focus{
+    outline: none;
+}
+
 .pro-info {
     display: flex;
     flex-wrap: wrap;
@@ -67,32 +71,30 @@
     text-align: left !important;
 }
 
-.info-manip {
-    display: flex;
-    flex-wrap: wrap;
-    text-align: center;
-    align-items: center;
+.edit {
+    border: none;
+    width: 100%;
+}
 
-    background-color: white;
-    border-radius: 12px;
+.contact-button {
+    background-color: #26B400;
+
+    border: none;
+    border-radius: 5px;
     
-    margin-bottom: 10px;
+    text-decoration: none;
+    font-weight: 700;
+    color: white;
+
+    margin-bottom: 20px;
+    padding: 12px 32px;
+    cursor: pointer;
 }
 
-.manip-choice {
-    flex: 100%;
+.contact-button:hover {
+    background-color: #2BCE00;
     text-decoration: none;
-    font-size: 17px;
-    font-weight: 600;
-
-    padding: 10px 0px;
-    transition: 0.5s;
-}
-
-.manip-choice:hover {
-    text-decoration: none;
-    background-color: #e3e3e3 !important;
-    color: red;
+    color: white;
 }
 
 @media (max-width: 1000px) {
@@ -115,10 +117,6 @@
         flex: 100%;
         margin: 0;
         margin-top: 10px;
-    }
-
-    .manip-choice:hover {
-        background-color: #e3e3e3 !important;
     }
 }
 
