--- a/user/templates/user/edit_profile.html
+++ b/user/templates/user/edit_profile.html
@@ -7,7 +7,7 @@
 <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
 <link href='https://unpkg.com/boxicons@2.0.9/css/boxicons.min.css' rel='stylesheet'>
 <link href="{% static 'css/navbar_and_chatlist.css' %}" rel="stylesheet">
-<link href="{% static 'css/profile.css' %}" rel="stylesheet">
+<link href="{% static 'css/edit_profile.css' %}" rel="stylesheet">
 
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
 {% endblock %}
@@ -53,7 +53,7 @@
         <div class="offcanvas-body">
             <form class="d-flex" action="{% url 'index' %}">
                 <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search" name="search">
-                <button class="btn btn-outline-success" type="submit">
+                <button class="btn btn-outline-success" type="button">
                     <i class='bx bx-search-alt' ></i>
                 </button>
             </form>
