--- a/chatrooms/templates/profile/receiver_profile.html
+++ b/chatrooms/templates/profile/receiver_profile.html
@@ -2,7 +2,7 @@
 {% load static customtags %}
 {% load static %}
 
-{% block title %}Home{% endblock %}
+{% block title %}{{receiver.first_name}} {{receiver.last_name}}{% endblock %}
 {% block head %}
 <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
 <link href='https://unpkg.com/boxicons@2.0.9/css/boxicons.min.css' rel='stylesheet'>
@@ -93,7 +93,11 @@
                         Email
                     </div>
                     <div class="info-info">
+                        {% if receiver.email == "" %}
+                        No info
+                        {% else %}
                         {{receiver.email}}
+                        {% endif %}
                     </div>
                 </div>
                 <div class="content-items">
@@ -101,7 +105,11 @@
                         First Name
                     </div>
                     <div class="info-info">
+                        {% if receiver.first_name == "" %}
+                        No info
+                        {% else %}
                         {{receiver.first_name}}
+                        {% endif %}
                     </div>
                 </div>
                 <div class="content-items">
@@ -109,7 +117,11 @@
                         Last Name
                     </div>
                     <div class="info-info">
+                        {% if receiver.last_name == "" %}
+                        No info
+                        {% else %}
                         {{receiver.last_name}}
+                        {% endif %}
                     </div>
                 </div>
             </div>
@@ -120,7 +132,11 @@
                         Date of Birth
                     </div>
                     <div class="info-info">
+                        {% if receiver.dob == "" %}
+                        No info
+                        {% else %}
                         {{receiver.dob}}
+                        {% endif %}
                     </div>
                 </div>
                 <div class="content-items">
@@ -128,7 +144,11 @@
                         Gender
                     </div>
                     <div class="info-info">
+                        {% if receiver.sex == "" %}
+                        Other
+                        {% else %}
                         {{receiver.sex}}
+                        {% endif %}
                     </div>
                 </div>
                 <div class="content-items">
@@ -136,7 +156,11 @@
                         Address
                     </div>
                     <div class="info-info">
+                        {% if receiver.address == "" %}
+                        No info
+                        {% else %}
                         {{receiver.address}}
+                        {% endif %}
                     </div>
                 </div>
                 <div class="content-items">
