--- a/static/css/change_password.css
+++ b/static/css/change_password.css
@@ -40,13 +40,17 @@ input:focus, textarea:focus, select:focus{
 }
 
 .content-left {
-    flex: 40%;
-    padding: 20px 30px 20px 20px;
+    flex: 30%;
+
+    padding: 20px 5px 20px 20px;
     margin: auto;
+    border-right: 1px solid #c8c8c8;
+
+    text-align: left !important;
 }
 
 .content-right {
-    flex: 40%;
+    flex: 50%;
     padding: 20px 20px 20px 30px;
     margin: auto;
 }
@@ -76,7 +80,7 @@ input:focus, textarea:focus, select:focus{
     width: 100%;
 }
 
-.contact-button {
+.update-pass {
     background-color: #26B400;
 
     border: none;
@@ -91,7 +95,7 @@ input:focus, textarea:focus, select:focus{
     cursor: pointer;
 }
 
-.contact-button:hover {
+.update-pass:hover {
     background-color: #2BCE00;
     text-decoration: none;
     color: white;
