--- a/user/templates/user/change_password.html
+++ b/user/templates/user/change_password.html
@@ -2,7 +2,7 @@
 {% load static customtags %}
 {% load static %}
 
-{% block title %} {{user.first_name}} {{user.last_name}} {% endblock %}
+{% block title %} Change Password {% endblock %}
 {% block head %}
 <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
 <link href='https://unpkg.com/boxicons@2.0.9/css/boxicons.min.css' rel='stylesheet'>
@@ -83,82 +83,29 @@
         </div>
 
         <div class="info-right">
-            <form method="POST">
-                {% csrf_token %}
-                    <table>
-                        {{form.as_table}}
-                    </table>
-                <input type="submit" class="btn btn-success btn-lg btn-block" value="Confirm">
-            </form> 
-            <!-- <div class="content-right"> -->
-                <!-- <div class="content-items">
-                    <div class="info-label">
-                        User
-                    </div>
-                    <div class="info-info">
-                        {{user.username}}
-                    </div>
-                </div>
-                <div class="content-items">
-                    <div class="info-label">
-                        Email
-                    </div>
-                    <div class="info-info">
-                        {{user.email}}
-                    </div>
-                </div>
-                <div class="content-items">
-                    <div class="info-label">
-                        First Name
-                    </div>
-                    <div class="info-info">
-                        {{user.first_name}}
-                    </div>
-                </div>
-                <div class="content-items">
-                    <div class="info-label">
-                        Last Name
-                    </div>
-                    <div class="info-info">
-                        {{user.last_name}}
-                    </div>
-                </div> -->
-            <!-- </div> -->
+            <div class="content-left">
+                <li> Your password can't be too similar to your other personal information. </li>
+                <li> Your password must contain at least 8 characters. </li>
+                <li> Your password can't be a commonly used password. </li>
+                <li> Your password can't be entirely numeric. </li>
+            </div>
 
-            <!-- <div class="content-left"> -->
-                <!-- <div class="content-items">
-                    <div class="info-label">
-                        Date of Birth
+            <div class="content-right">
+                <form method="POST">
+                    {% csrf_token %}
+                    {% for field in form %}
+                    <div class="content-items">
+                        <div class="info-label">
+                            {{field.label}}
+                        </div>
+                        <div class="info-info">
+                            {{field}}
+                        </div>
                     </div>
-                    <div class="info-info">
-                        {{user.dob}}
-                    </div>
-                </div>
-                <div class="content-items">
-                    <div class="info-label">
-                        Gender
-                    </div>
-                    <div class="info-info">
-                        {{user.sex}}
-                    </div>
-                </div>
-                <div class="content-items">
-                    <div class="info-label">
-                        Address
-                    </div>
-                    <div class="info-info">
-                        {{user.address}}
-                    </div>
-                </div>
-                <div class="content-items">
-                    <div class="info-label">
-                        Phone Number
-                    </div>
-                    <div class="info-info">
-                        Nope
-                    </div>
-                </div> -->
-            <!-- </div> -->
+                    {% endfor %}
+                    <input class="update-pass" type="submit" value="Confirm">
+                </form>
+            </div>
         </div>
     </div>
 </div>
@@ -172,7 +119,7 @@
 {% endblock %}
 
 
-<!DOCTYPE html>
+<!-- <!DOCTYPE html>
 <html lang="en">
 
 <head>
@@ -210,4 +157,4 @@
         crossorigin="anonymous"></script>
 </body>
 
-</html>
+</html> -->
