--- a/user/templates/user/change_password.html
+++ b/user/templates/user/change_password.html
@@ -91,7 +91,7 @@
             </div>
 
             <div class="content-right">
-                <form method="POST">
+                <form method="POST" action="{% url 'change_password' %}">
                     {% csrf_token %}
                     {% for field in form %}
                     <div class="content-items">
