--- a/chatrooms/templates/chatrooms/index.html
+++ b/chatrooms/templates/chatrooms/index.html
@@ -4,11 +4,25 @@
 
 {% block title %}Home{% endblock %}
 {% block head %}
-<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
+    integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
 <link href='https://unpkg.com/boxicons@2.0.9/css/boxicons.min.css' rel='stylesheet'>
 <link href="{% static 'css/navbar_and_chatlist.css' %}" rel="stylesheet">
 
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
+    integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
+    crossorigin="anonymous"></script>
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+<script>
+    $(document).ready(function () {
+        $("#search").on("keyup", function () {
+            var value = $(this).val().toLowerCase();
+            $("#friend p").filter(function () {
+                $(this).toggle($(this).text().toLowerCase().indexOf(value) > -1)
+            });
+        });
+    });
+</script>
 {% endblock %}
 
 {% block content %}
@@ -18,118 +32,73 @@
             <a class="navbar-brand" href="/chat">
                 <img src="{% static 'images/home_button.jpg' %}" class="rounded-circle home_button">
             </a>
-            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
+                data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false"
+                aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
             </button>
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
                 <ul class="navbar-nav mx-auto mb-2 mb-lg-0">
-                    <button class="nav-item btn" type="button" data-bs-toggle="offcanvas" data-bs-target="#offcanvasRight" aria-controls="offcanvasRight">
+                    <button class="nav-item btn" type="button" data-bs-toggle="offcanvas"
+                        data-bs-target="#offcanvasRight" aria-controls="offcanvasRight">
                         <i class='nav-link bx bxl-messenger icon'></i>
                     </button>
                     <button class="nav-item btn" type="button">
                         <a role="button" href="/chat/{{user.username}}/profile">
-                            <i class='nav-link bx bx-user-circle icon' ></i>
+                            <i class='nav-link bx bx-user-circle icon'></i>
                         </a>
                     </button>
                 </ul>
                 <ul class="navbar-nav me-0 mb-2 mb-lg-0">
                     <button class="nav-item btn" type="button">
                         <a role="button" href="{% url 'logout' %}">
-                            <i class='nav-link bx bx-log-out icon' ></i>
+                            <i class='nav-link bx bx-log-out icon'></i>
                         </a>
                     </button>
                 </ul>
             </div>
         </div>
     </nav>
-    
+
     <div class="offcanvas offcanvas-end" tabindex="-1" id="offcanvasRight" aria-labelledby="offcanvasRightLabel">
         <div class="offcanvas-header">
             <h1 id="offcanvasRightLabel"> <strong>Your Friends</strong></h1>
             <button type="button" class="btn-close text-reset" data-bs-dismiss="offcanvas" aria-label="Close"></button>
         </div>
-        
+
         <div class="offcanvas-body">
             <form class="d-flex" action="">
-                <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search" name="search">
+                <input id='search' class="form-control me-2" type="search" placeholder="Search" aria-label="Search"
+                    name="search">
                 <button class="btn btn-outline-success" type="button">
-                    <i class='bx bx-search-alt' ></i>
+                    <i class='bx bx-search-alt'></i>
                 </button>
             </form>
-            
-            <div class="chat-list">
+
+            <div class="chat-list" id='friend'>
                 {% for user_dict in users %}
                 <div class="friend">
-                    <a class="btn left-side" href="{% build_chat_url user.username user_dict.username %}"><strong>{{user_dict.first_name}} {{user_dict.last_name}}</strong></a>
- 
-                    <a class="btn right-side" href="/chat/{{user_dict.username}}/receiverprofile">
-                        <i class='bx bxs-user-account icon receiver'></i>
-                    </a> 
+                    <a class="btn left-side"
+                        href="{% build_chat_url user.username user_dict.username %}"><p>{{user_dict.first_name}}
+                            {{user_dict.last_name}} <a class="btn right-side" href="/chat/{{user_dict.username}}/receiverprofile">
+                                <i class='bx bxs-user-account icon receiver'></i>
+                            </a> </p></a>
+
+                    
                 </div>
 
                 {% empty %}
                 <p class="text-muted">Ups! no users to chat with.</p>
                 {% endfor %}
             </div>
-            
-            
-            
+
+
+
         </div>
     </div>
 
     <br>
 
-    <!-- testing -->
-    <!-- <div class="card card-body mx-auto text-left">
-        <div>
-            <h3>Your Friends:</h3>
-            <form class="d-flex" action="{% url 'index' %}">
-                <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search" name="search">
-                <button class="btn btn-outline-success" type="submit">Search</button>
-            </form>
-    
-        </div>
-        <div class="list-group">
-            {% for user_dict in users %}    
-            <li class="nav-item dropdown">
-                <a class="nav-link dropdown-toggle" data-bs-toggle="dropdown" href="#" role="button" aria-expanded="false">{{user_dict.first_name}} {{user_dict.last_name}}</a>
-                <ul class="dropdown-menu">
-                  <li><a class="dropdown-item" href="{% build_chat_url user.username user_dict.username %}">Inbox</a></li>
-                  <li><a class="dropdown-item" href="{{user_dict.username}}/receiverprofile">Profile</a></li>
-                </ul>
-            </li>
-            
-            {% empty %}
-            <p class="text-muted">Ups! no users to chat with.</p>
-            {% endfor %}
-        </div>
-    </div> -->
 </div>
-<!-- <a href="{% build_chat_url user.username user_dict.username %}" class="list-group-item list-group-item-action">{{ user_dict.username }}</a> -->
+
 {% endblock %}
-<!-- <!DOCTYPE html>
-<html>
-<head>
-    <meta charset="utf-8"/>
-    <title>Chat Rooms</title>
-</head>
-<body>
-    <h1 class="font-weight-bold">Chat</h1>
-    <div class="card card-body mx-auto text-left">
-        <div class="btn-group btn-block mb-4" role="group">
-            <button class="btn btn-primary" type="button">{{ user.username }} ({{ user.email }})</button>
-            <a class="btn btn-primary" href="{% url 'logout' %}" role="button">Sign out</a>
-        </div>
-        <h3>Users</h3>
-        <div class="list-group">
-            {% for user_dict in users %}    
-           {% build_chat_url user.username user_dict.username %} 
-            <a href="#" class="list-group-item list-group-item-action">{{ user_dict.username }}</a>
-            {% empty %}
-            <p class="text-muted">Ups! no users to chat with.</p>
-            {% endfor %}
-            
-        </div>
-    </div>
-</body>
-</html> -->
